<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.reservation.conflict.ReservationConflictFragment">

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reservation_conflict"
        android:layout_margin="16dp"
        style="@style/TextStyle.Title"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <CheckBox
        android:id="@+id/chk_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chillie_i_understand"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toTopOf="@id/btn_confirm"/>

    <Button
        android:id="@+id/btn_confirm"
        android:text="@string/button_confirm"
        android:textAllCaps="false"
        android:layout_margin="16dp"
        android:background="@drawable/button_background"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
