<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/mouse_text"
    android:layout_gravity="bottom"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.reservation.select.ReservationSelectNoticeFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reservation_select_continue_note_title"
        style="@style/TextStyle.White.Bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/reservation_select_continue_note_message"
        style="@style/TextStyle.White"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_close"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <ImageButton
        android:id="@+id/btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_cancel_24"
        app:tint="@color/white"
        android:contentDescription="@string/content_dismiss_reservation_note"
        android:layout_margin="8dp"
        android:background="@color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
